fixing layout - sort of

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
-  		background-color: #22138b;
+  		background-color: #ffffff;
 		  font-family: "Helvetica,Arial,FreeSans";
-  		color: #ffffff;
+  		color: black;
     }
     #container {
       margin: 0 auto;
@@ -52,12 +52,14 @@
       Lightweight node and service registry based on Zookeeper
     </div>
 
-    <p>_ZooKeeper is a centralized service for maintaining configuration information, naming, providing distributed synchronization, and providing group services_
+    <p><i>ZooKeeper is a centralized service for maintaining configuration information, naming, providing distributed synchronization, and providing group services</i></p>
 
-Noah is not quite the same as but heavily inspired by Apache Zookeeper.</p><h2>Dependencies</h2>
-<p>sinatra
-redis
-ohm</p>
+<p>Noah is not quite the same as but heavily inspired by Apache Zookeeper.</p><h2>Dependencies</h2>
+<ul>
+<li>sinatra</li>
+<li>redis</li>
+<li>ohm</li>
+</ul>
 <h2>Install</h2>
 <p>gem install noah	</p>
 <h2>License</h2>
